--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -1,7 +1,9 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:gravity="center_horizontal|center_vertical"
     android:background="@drawable/background_repeated"
     tools:context=".SplashScreenActivity">
 
@@ -9,13 +11,21 @@
          is needed to present your content, e.g. VideoView, SurfaceView,
          TextureView, etc. -->
     <TextView
-        android:id="@+id/fullscreen_content"
+        android:id="@+id/fullscreen_title"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:gravity="center"
         android:keepScreenOn="true"
-        android:text="@string/app_name"
-        android:textColor="#33b5e5"
+        android:text="@string/splashscreen_title"
         android:textSize="50sp" />
 
-</FrameLayout>
+    <TextView
+        android:id="@+id/fullscreen_version"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:layout_marginTop="20dp"
+        android:keepScreenOn="true"
+        android:text="@string/splashscreen_version"
+        android:textSize="20sp" />
+</LinearLayout>
